listings/ch04-understanding-ownership/no-listing-04-cant-use-after-move/output.txt
$ cargo run
   Compiling system_wlasnosci v0.1.0 (file:///projects/system_wlasnosci)
error[E0382]: borrow of moved value: `s1`
 --> src/main.rs:5:28
  |
<<<<<<< HEAD
2 |     let s1 = String::from("witaj");
  |         -- move occurs because `s1` has type `std::string::String`, which does not implement the `Copy` trait
=======
2 |     let s1 = String::from("hello");
  |         -- move occurs because `s1` has type `String`, which does not implement the `Copy` trait
>>>>>>> english/master
3 |     let s2 = s1;
  |              -- value moved here
4 | 
5 |     println!("{}, świecie!", s1);
  |                            ^^ value borrowed here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
<<<<<<< HEAD
error: could not compile `system_wlasnosci`.
=======
error: could not compile `ownership`
>>>>>>> english/master

To learn more, run the command again with --verbose.
